# butler

./: .gitignore  CMakeLists.txt  README.md  exploit.md  server-certificate.crt  server-private-key.pem  server-public-key.pem  setup.sh
include/: argparse.hpp  httpParser.cpp  httpParser.hpp  simpleHttp.cpp  simpleHttp.hpp  simpleServer.hpp  simpleSocket.cpp  simpleSocket.hpp  util.cpp  util.hpp
src/client/: CMakeLists.txt  client.cpp  client.cpp.back  client_combined.cpp  playground_bios.cpp  playground_tls.cpp  tls_example.cpp
src/client/testing/: client_combined.cpp  client_sockets.cpp  playground_bios.cpp  playground_client.cpp  playground_tls.cpp  tls_example.cpp
src/lib/: httpParser.cpp  simpleHttp.cpp  simpleServer.cpp  simpleSocket.cpp  util.cpp
src/server/: CMakeLists.txt  server.cpp
src/server/parser/: CMakeLists.txt  parser.cpp
